[tool.poetry]
name = "bavest"
version = "1.0.2"
description = "The Bavest Finance Python SDK"
authors = ["William Todt <william.todt@bavest.co>"]
readme = "README.md"
packages = [{include = "bavest"}]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
